--- a/Тест план.md
+++ b/Тест план.md
@@ -1,14 +1,14 @@
 
-бъект и субъект тестирования 
+1. Объект и субъект тестирования 
 
-Основные требования 
+2. Основные требования 
 
-Тестирование требований 
+3. Тестирование требований 
 
-Типы тестирования и тест документация 
+4. Типы тестирования и тест документация 
 
-Тестирование расписания 
+5. Тестирование расписания 
 
-Тестирование
+6. Тестирование
 
-Отчет о тестировании итогового проекта
+7. Отчет о тестировании итогового проекта
