--- a/docs/Тестирование требований.md
+++ b/docs/Тестирование требований.md
@@ -1,7 +1,10 @@
 | № | Требование | Вопрос к требованию | Критерий (необязательно) |
-| - | ---------: |:-------------------:| ------------------------:|
+| - | :--------: |:-------------------:| :-----------------------:|
 | 1 | Преподаватель может добавить личное событие двумя способами: -кликнуть в слот, -нажать на плюс | Какой слот? Какой плюс, где он находится? | Требование не соответствует критерию «завершенность» |
-| 2 |
-| 3 |
-| 4 |
-| 5 |
+| 2 | Название — обязательный параметр, но не более чем 40 символов | 40 символов каких кир, англ юникод? | Требование не соответствует критерию «завершенность»| 
+| 3 | Дата и время — обязательный параметр | Можно ли считать дату из прошлого действительной при добавлении события? | Требование не соответствует критерию «завершенность» |
+| 4 | Если событие и урок совпадают по времени, урок отображается всегда выше всего | Как последнее добавленное событие отображается выше, если урок отображается всегда выше? | Требование не соответствует критерию «завершенность» «последовательность» |
+| 5 | Если событие и урок совпадают по времени, урок отображается всегда выше всего.
+Если два события происходят в одно время, отображается выше то, которое было создано последним | Как последнее добавленное событие отображается выше, если урок отображается всегда выше?
+Какие варианты отображения если событий больше? Может ли быть больше 2х событий одновременно? | Требование не соответствует критерию
+«завершенность» «последовательность» |
