Update Отчет о тестировании итогового проекта.md

--- a/docs/Отчет о тестировании итогового проекта.md
+++ b/docs/Отчет о тестировании итогового проекта.md
@@ -23,7 +23,7 @@
 
 Регрессионное тестирование [(regression testing)]()
 
-API тестирование [(API testing)]()
+API тестирование [(API testing)](https://github.com/ELvovo7/-1-2-Skypro-/tree/main/pic/API%20testing)
 
 Вывод:
 В общем и целом функционал (Личные события) системы можно считать завершённым и удовлетворяющим всем требованиям для выпуска. Критичных проблем не наблюдается. Вместе с тем, желательно уточнить и детализировать общие требования к документации.
