Update Отчет о тестировании итогового проекта.md

--- a/docs/Отчет о тестировании итогового проекта.md
+++ b/docs/Отчет о тестировании итогового проекта.md
@@ -19,7 +19,7 @@
 
 Приемочное тестирование [(acceptance testing)](https://app.qase.io/public/report/3fa97ca371c7dd6c19a77db2c4caf48c65b85967)
 
-Функциональное тестирование [(functional testing)]()
+Функциональное тестирование [(functional testing)](https://github.com/ELvovo7/-1-2-Skypro-/tree/main/pic/functional%20testing)
 
 Регрессионное тестирование [(regression testing)]()
 
