Update Отчет о тестировании итогового проекта.md

--- a/docs/Отчет о тестировании итогового проекта.md
+++ b/docs/Отчет о тестировании итогового проекта.md
@@ -21,7 +21,7 @@
 
 Функциональное тестирование [(functional testing)](https://github.com/ELvovo7/-1-2-Skypro-/tree/main/pic/functional%20testing)
 
-Регрессионное тестирование [(regression testing)]()
+Регрессионное тестирование [(regression testing)](https://github.com/ELvovo7/-1-2-Skypro-/tree/main/pic/regression%20testing)
 
 API тестирование [(API testing)](https://github.com/ELvovo7/-1-2-Skypro-/tree/main/pic/API%20testing)
 
