Update Отчет о тестировании итогового проекта.md

--- a/docs/Отчет о тестировании итогового проекта.md
+++ b/docs/Отчет о тестировании итогового проекта.md
@@ -5,11 +5,11 @@
 Времени было потрачено 23 часа
 
 Были применены виды тестирования
--Дымовое тестирование (smoke testing) 
--Регрессионное тестирование (regression testing)
--Функциональное тестирование (functional testing)
--Приемочное тестирование (acceptance testing)
--API тестирование (API testing)
+- Дымовое тестирование (smoke testing);
+- Регрессионное тестирование (regression testing);
+- Функциональное тестирование (functional testing);
+- Приемочное тестирование (acceptance testing);
+- API тестирование (API testing).
 
 Найдено 4 [бага](https://kuzminsky.atlassian.net/jira/software/projects/MP1/boards/8)  (по итогу объединены в один, т.к. найдены в одном функционале), 1 [баг](https://kuzminsky.atlassian.net/jira/software/projects/MP1/boards/8?selectedIssue=MP1-3) после регрессионного тестирования, 1 [баг](https://kuzminsky.atlassian.net/jira/software/projects/MP1/boards/8?selectedIssue=MP1-4) после API тестирования.
 
