Update Отчет о тестировании итогового проекта.md

--- a/docs/Отчет о тестировании итогового проекта.md
+++ b/docs/Отчет о тестировании итогового проекта.md
@@ -25,9 +25,9 @@
 
 API тестирование [(API testing)](https://github.com/ELvovo7/-1-2-Skypro-/tree/main/pic/API%20testing)
 
-Вывод:
+**Вывод**:
 В общем и целом функционал (Личные события) системы можно считать завершённым и удовлетворяющим всем требованиям для выпуска. Критичных проблем не наблюдается. Вместе с тем, желательно уточнить и детализировать общие требования к документации.
 В процессе работы было проведено 10 API тестов (найден один баг). В своей основе они дублируют UI тесты.
 
-Итог:
+**Итог**:
 В ходе тестирования всей системы выяснилось, что новый функционал (Личные события) “ломают” старый функционал (отмену “Урока”). Выпускать весь продукт до исправления ошибки с “отменой урока” нельзя.
