--- a/docs/Объект тестирования.md
+++ b/docs/Объект тестирования.md
@@ -1,7 +1,7 @@
 ## Объект тестирования
 
-Продукт: образовательная платформа онлайн школы Skyeng (системы тайм менеджмента учителей/календарь расписания)
+**Продукт:** образовательная платформа онлайн школы Skyeng (системы тайм менеджмента учителей/календарь расписания)
 
-Заказчик: компания Skyeng
+**Заказчик:** компания Skyeng
 
-Сайт: личный кабинет учителя (тестовая версия)
+**Сайт:** личный кабинет учителя (тестовая версия)
