--- a/docs/Основные требования.md
+++ b/docs/Основные требования.md
@@ -1,9 +1,9 @@
 ## Основные требования
 
-- Добавление личных событий
-- Удалить личные события
-- Редактировать личные события
-- Совмещение личного события и занятий
+- Добавление личных событий;
+- Удалить личные события;
+- Редактировать личные события;
+- Совмещение личного события и занятий.
 
 [Полные требования](https://skyengpublic.notion.site/535607a88d6c49a8b8b8265560333ee5)
 
@@ -11,6 +11,6 @@
 
 [Сайт](skyeng.ru) (выбрать вход по логину и паролю) 
 
-Логин: test-mobile1@skyeng.ru 
+**Логин:** test-mobile1@skyeng.ru 
 
-Пароль: Abc12345678 или (flV*5?wRT6)
+**Пароль:** Abc12345678 или (flV*5?wRT6)
