--- a/docs/Основные требования.md
+++ b/docs/Основные требования.md
@@ -1,13 +1,13 @@
-## Основные требования
+# Основные требования
 
 - Добавление личных событий;
 - Удалить личные события;
 - Редактировать личные события;
 - Совмещение личного события и занятий.
 
-[Полные требования](https://skyengpublic.notion.site/535607a88d6c49a8b8b8265560333ee5)
+# [Полные требования](https://skyengpublic.notion.site/535607a88d6c49a8b8b8265560333ee5)
 
-[Декомпозиция](https://miro.com/app/board/uXjVPCjSLWI=/)
+# [Декомпозиция](https://miro.com/app/board/uXjVPCjSLWI=/)
 
-[Сайт](skyeng.ru) (выбрать вход по логину и паролю) 
+# [Сайт](skyeng.ru) (выбрать вход по логину и паролю) 
  
