--- a/docs/Основные требования.md
+++ b/docs/Основные требования.md
@@ -9,5 +9,6 @@
 
 # [Декомпозиция](https://miro.com/app/board/uXjVPCjSLWI=/)
 
-# [Сайт](skyeng.ru) (выбрать вход по логину и паролю) 
+# [Сайт](skyeng.ru) 
+(выбрать вход по логину и паролю) 
  
