--- a/docs/Основные требования.md
+++ b/docs/Основные требования.md
@@ -5,7 +5,44 @@
 - Редактировать личные события;
 - Совмещение личного события и занятий.
 
-# [Полные требования](https://skyengpublic.notion.site/535607a88d6c49a8b8b8265560333ee5)
+# [Полные требования]
+Мы добавили в календарь новый элемент — **личные события**. 
+Преподаватель может использовать личные события для собственных встреч. 
+Они служат напоминанием, что у преподавателя что-то запланировано на это время.
+![image](https://github.com/ELvovo7/-Coursework-1-2-Skypro-/assets/57502747/48f90033-a9aa-43ae-966e-bf4fad597e59)
+
+### Операции с личными событиями
+
+- *Добавление личных событий.*
+    Преподаватель может добавить личное событие двумя способами:
+    - кликнуть в слот,
+    - нажать на плюс.
+    
+    При добавлении личного события:
+    - Название — обязательный параметр, но не более чем 40 символов.
+    - Дата и время — обязательный параметр.
+    - Описание — необязательно для заполнения, нет ограничения на символы. На данном этапе нельзя вставлять картинки. Доступны маркдауны и ссылки.
+    - Цвет события — по умолчанию серый.
+ ![image](https://github.com/ELvovo7/-Coursework-1-2-Skypro-/assets/57502747/abcf6914-a5e7-4900-abf3-02e51baec6d6)
+
+- *Удаление личных событий.*
+   Для удаления личного события необходимо на него кликнуть и нажать кнопку «Удалить».
+ ![image](https://github.com/ELvovo7/-Coursework-1-2-Skypro-/assets/57502747/538d1bcc-953e-47ff-b2b4-1c0b20fb87c7)
+
+- *Редактирование личных событий.*
+    Для того чтобы отредактировать личное событие, необходимо кликнуть на него и нажать «Редактировать».
+    При редактировании можно изменить:
+    - название,
+    - цвет,
+    - описание,
+    - время.
+ ![image](https://github.com/ELvovo7/-Coursework-1-2-Skypro-/assets/57502747/355e35ff-ec3c-45ff-942c-b7c056df915e)
+
+- *Совмещение личного события и урока.*
+    Если событие и урок совпадают по времени, урок отображается всегда выше всего.
+    Если два события происходят в одно время, отображается выше то, которое было создано последним.
+  ![image](https://github.com/ELvovo7/-Coursework-1-2-Skypro-/assets/57502747/b5f390d6-cddb-44b0-9cc3-45ffcecc7139)
+
 
 # [Декомпозиция](https://miro.com/app/board/uXjVPCjSLWI=/)
 
