--- a/docs/Основные требования.md
+++ b/docs/Основные требования.md
@@ -5,7 +5,7 @@
 - Редактировать личные события;
 - Совмещение личного события и занятий.
 
-# [Полные требования]
+# Полные требования
 Мы добавили в календарь новый элемент — **личные события**. 
 Преподаватель может использовать личные события для собственных встреч. 
 Они служат напоминанием, что у преподавателя что-то запланировано на это время.
